Update landing : fixed sticky button on mobile devices

--- a/app/assets/stylesheets/shared/_banner.scss
+++ b/app/assets/stylesheets/shared/_banner.scss
@@ -9,6 +9,7 @@
     margin-top: 160px;
   }
   .banner-action {
+    position: fixed;
     @include media-min($medium) {
       position: unset;
     }
@@ -23,7 +24,9 @@
   flex-direction: column;
   gap: 24px;
   text-align: center;
-  align-items: center;
+  @include media-min($medium){
+    align-items: center;
+  }
 }
 
 .banner-baseline h1 {
